# agent-mesh

./: AGENTS.md  CLAUDE.md  OPENCODE.md  README.md  pyproject.toml
.agentic/: config.toml  project.json
.agentic/claims/: MESH-11.json  MESH-13.json  MESH-17.json  MESH-18.json  MESH-20.json  MESH-21.json  MESH-23.json  MESH-5.json  MESH-6.json  MESH-9.json
.agentic/context/: CONTEXT-MAP.md  CONTEXT.md
.agentic/dashboard/: index.html
.agentic/handoffs/: README.md
.agentic/reviews/: PR-MESH-1.json  PR-MESH-11.json  PR-MESH-12.json  PR-MESH-13.json  PR-MESH-15.json  PR-MESH-16.json  PR-MESH-17.json  PR-MESH-18.json  PR-MESH-19.json  PR-MESH-20.json  PR-MESH-21.json  PR-MESH-22.json  PR-MESH-5.json  PR-MESH-9.json
.agentic/work/: MESH-1.json  MESH-10.json  MESH-11.json  MESH-12.json  MESH-13.json  MESH-14.json  MESH-15.json  MESH-16.json  MESH-17.json  MESH-18.json  MESH-19.json  MESH-2.json  MESH-20.json  MESH-21.json  MESH-22.json  MESH-23.json  MESH-3.json  MESH-4.json  MESH-5.json  MESH-6.json  MESH-7.json  MESH-8.json  MESH-9.json
.agentic/workflows/: address.md  align.md  claim.md  diagnose.md  handoff.md  implement.md  merge.md  ongoing.md  pr.md  prototype.md  refactor.md  review.md  setup.md  sync.md  to-prd.md  to-tasks.md  (+1 more)
.claude/: settings.json
agent_mesh/: __init__.py  __main__.py  cli.py  config.py  scaffold.py  topology.py  tui.py
agent_mesh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: codex-prompt.md
tests/: test_cli.py  test_config.py  test_lane.py  test_storage.py  test_workflow.py
(+105 files in other folders)
